# AI_Tools

./: .gitignore  CLAUDE.md  README.md  ai_alibaba.md  ai_claude.md  ai_cohere.md  ai_deepseek.md  ai_fireworks.md  ai_google.md  ai_groq.md  ai_image_dalle.md  ai_image_firefly.md  ai_image_flux.md  ai_image_ideogram.md  ai_image_imagen.md  ai_image_leonardo.md  ai_image_midjourney.md  ai_image_recraft.md  ai_image_stablediffusion.md  ai_meta.md  ai_microsoft.md  ai_mistral.md  ai_moonshot.md  ai_openai.md  ai_together.md  ai_video_kling.md  ai_video_luma.md  ai_video_minimax.md  ai_video_pika.md  ai_video_runway.md  ai_video_seedance.md  ai_video_sora.md  ai_video_svd.md  ai_video_veo.md  ai_xai.md  ai_zhipu.md  plan.md  pyproject.toml
ImageGen/: README.md  __init__.py  __main__.py  config.template.json  image_gen.py
ImageGen/examples/: run_dalle.ps1  run_firefly.ps1  run_flux.ps1  run_google_imagen.ps1  run_ideogram.ps1  run_leonardo.ps1  run_local.ps1  run_stability.ps1
ImageGen/unittest/: run_all_tests.py  test_image_gen.py
LLM_Client/: README.md  __init__.py  __main__.py  config.template.json  llm_client.py
LLM_Client/examples/: prompts_named.json  prompts_single.json  run_claude.ps1  run_config_writer.ps1  run_deepseek.ps1  run_gemini.ps1  run_grok.ps1  run_groq.ps1  run_kimi.ps1  run_mistral.ps1  run_openai.ps1  run_output.ps1  run_presets.ps1  run_prompts_file.ps1  run_url_fetch.ps1
LLM_Client/unittest/: run_all_tests.py  test_claude.py  test_config_writer.py  test_deepseek.py  test_gemini.py  test_grok.py  test_groq.py  test_kimi.py  test_mistral.py  test_openai.py  test_output.py  test_presets.py  test_prompts_file.py  test_url_fetch.py  test_utils.py
llm-api/: Dockerfile  README.md  api.py  docker-compose.yml
llm-api/examples/: requests.ps1
llm-api/tests/: test_api.py
n8n/: README.md  package-lock.json  package.json  tsconfig.json
n8n/credentials/: MediaApiCredentials.ts
n8n/nodes/ImageGen/: ImageGen.node.ts
n8n/nodes/LlmClient/: LlmClient.node.ts
n8n/tests/: test_nodes.js
